fix: station detail now gets scrollbar

--- a/src/app/station-detail/station-detail.component.scss
+++ b/src/app/station-detail/station-detail.component.scss
@@ -2,6 +2,8 @@ mat-card{
     box-sizing: border-box;
     width: 100%;
     height: 100%;
+
+	overflow: auto;
 }
 .date{
     font-size: 0.8em;
